# rust-backend-realworld

./: Cargo.toml  Dockerfile
crates/models/: .env  Cargo.toml
crates/models/src/: lib.rs  model.rs  schema.rs
crates/models/src/entity/: mod.rs  my_table.rs  prelude.rs
src/: main.rs  models.rs
src/controllers/: job_controller.rs  mod.rs
src/models/: mod.rs  models.rs
src/rapi/: cmdb.rs  jiacron.rs  mod.rs
src/rpc/: cmdb.rs  mod.rs
src/utils/: errors.rs  mod.rs
