[package]
name = "crontab-audit-extension"
version = "0.1.0"
edition = "2021"

#[workspace]
#members = ["crates/models"]
[dependencies]
#models = { path = "./crates/models" }
anyhow = "*"
chrono = "*"
log = "*"
env_logger = "*"
actix-web = "*"
rbatis = { version = "*", default-features = false, features = [
    "mysql",
    "runtime-actix-native-tls",
    "debug_mode",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "*", default-features = false, features = [
    "runtime-actix-native-tls",
    "mysql",
    "chrono",
    "macros",
    "migrate",
    "decimal",
    "bigdecimal"
] }
futures = "*"
sea-orm = { version = "*", features = [
    "sqlx-mysql",
    "runtime-actix-native-tls",
    "debug-print",
    "macros"
] }
dotenv = "*"
