[package]
name = "crontab-audit-extension"
version = "0.1.0"
edition = "2021"

#[workspace]
#members = ["crates/models"]
[dependencies]
#models = { path = "./crates/models" }
anyhow = "*"
chrono = "*"
log = "*"
env_logger = "*"
actix-web = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
sqlx = { version = "*", default-features = false, features = [
    "runtime-tokio-native-tls",
    "mysql",
    "chrono",
    "macros",
    "migrate",
    "decimal",
    "bigdecimal"
] }
futures = "*"
dotenv = "*"
reqwest = { version = "*", features = ["json"] }
thiserror = "*"
jsonwebtoken = { version = "*", default-features = false }
urlencoding = "*"
base64 = "*"
