[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
anyhow = "*"
sea-orm = { version = "^0", features = ["sqlx-mysql", "runtime-actix-native-tls", "macros", "debug-print"] }
serde = { version = "*" }
